--- a/lib/phx_packing_list_web/controllers/packing_list_html/packing_list_form.html.heex
+++ b/lib/phx_packing_list_web/controllers/packing_list_html/packing_list_form.html.heex
@@ -3,6 +3,7 @@
     Oops, something went wrong! Please check the errors below.
   </.error>
   <.input field={f[:title]} type="text" label="Title" />
+  <.input field={f[:travel_destination]} type="text" label="Travel Destination" />
   <.input field={f[:description]} type="text" label="Description" />
   <.input field={f[:start_date]} type="date" label="Start date" />
   <.input field={f[:end_date]} type="date" label="End date" />
