--- a/lib/phx_packing_list_web/controllers/packing_list_html/show.html.heex
+++ b/lib/phx_packing_list_web/controllers/packing_list_html/show.html.heex
@@ -10,6 +10,7 @@
 
 <.list>
   <:item title="Title"><%= @packing_list.title %></:item>
+  <:item title="Travel Destination"><%= @packing_list.travel_destination %></:item>
   <:item title="Description"><%= @packing_list.description %></:item>
   <:item title="Start date"><%= @packing_list.start_date %></:item>
   <:item title="End date"><%= @packing_list.end_date %></:item>
