refactor: updated paths for item controller and views

--- a/lib/phx_packing_list_web/controllers/packing_list_html/show.html.heex
+++ b/lib/phx_packing_list_web/controllers/packing_list_html/show.html.heex
@@ -5,6 +5,9 @@
     <.link href={~p"/packing_lists/#{@packing_list}/edit"}>
       <.button>Edit packing_list</.button>
     </.link>
+    <.link href={~p"/packing_lists/#{@packing_list}/items"}>
+      <.button>Manage Items</.button>
+    </.link>
   </:actions>
 </.header>
 
