--- a/lib/phx_packing_list_web/controllers/item_html/index.html.heex
+++ b/lib/phx_packing_list_web/controllers/item_html/index.html.heex
@@ -1,25 +1,27 @@
 <.header>
   Listing Items
   <:actions>
-    <.link href={~p"/items/new"}>
+    <.link href={~p"/packing_lists/#{@packing_list_id}/items/new/"}>
       <.button>New Item</.button>
     </.link>
   </:actions>
 </.header>
 
-<.table id="items" rows={@items} row_click={&JS.navigate(~p"/items/#{&1}")}>
+<.table id="items" rows={@items} row_click={&JS.navigate(~p"/packing_lists/#{@packing_list_id}/items/#{&1}")}>
   <:col :let={item} label="Name"><%= item.name %></:col>
   <:col :let={item} label="Quantity"><%= item.quantity %></:col>
   <:col :let={item} label="Notes"><%= item.notes %></:col>
   <:action :let={item}>
     <div class="sr-only">
-      <.link navigate={~p"/items/#{item}"}>Show</.link>
+      <.link navigate={~p"/packing_lists/#{@packing_list_id}/items/#{item}/edit"}>Edit</.link>
     </div>
-    <.link navigate={~p"/items/#{item}/edit"}>Edit</.link>
+    <.link navigate={~p"/packing_lists/#{@packing_list_id}/items/#{item}/edit"}>Edit</.link>
   </:action>
   <:action :let={item}>
-    <.link href={~p"/items/#{item}"} method="delete" data-confirm="Are you sure?">
+    <.link href={~p"/packing_lists/#{@packing_list_id}/items/#{item}"} method="delete" data-confirm="Are you sure?">
       Delete
     </.link>
   </:action>
 </.table>
+
+<.back navigate={~p"/packing_lists"}>Back to packing_lists</.back>
