--- a/lib/phx_packing_list_web/controllers/item_html/new.html.heex
+++ b/lib/phx_packing_list_web/controllers/item_html/new.html.heex
@@ -3,6 +3,6 @@
   <:subtitle>Use this form to manage item records in your database.</:subtitle>
 </.header>
 
-<.item_form changeset={@changeset} action={~p"/items"} />
+<.item_form changeset={@changeset} action={~p"/packing_lists/#{@packing_list_id}/items"} />
 
-<.back navigate={~p"/items"}>Back to items</.back>
+<.back navigate={~p"/packing_lists/#{@packing_list_id}/items"}>Back to items</.back>
