style: updated navigation routes in items new and edit templates to direct user to index of packing list

--- a/lib/phx_packing_list_web/controllers/item_html/edit.html.heex
+++ b/lib/phx_packing_list_web/controllers/item_html/edit.html.heex
@@ -5,4 +5,4 @@
 
 <.item_form changeset={@changeset} action={~p"/packing_lists/#{@packing_list_id}/items/#{@item}"} />
 
-<.back navigate={~p"/packing_lists/#{@packing_list_id}/items"}>Back to items</.back>
+<.back navigate={~p"/packing_lists/#{@packing_list_id}"}>Back to packing list</.back>
