style: added header menu to app heex layout

--- a/lib/phx_packing_list_web/components/layouts/app.html.heex
+++ b/lib/phx_packing_list_web/components/layouts/app.html.heex
@@ -28,6 +28,7 @@
 -->
 <main class="sm:px-4">
   <div class="mx-auto max-w-4xl">
+    <.header_menu />
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
