--- a/lib/phx_packing_list_web/live/packing_list_live/show.html.heex
+++ b/lib/phx_packing_list_web/live/packing_list_live/show.html.heex
@@ -1,26 +1,4 @@
-<.header>
-  Packing list <%= @packing_list.id %>
-  <:subtitle>This is a packing_list record from your database.</:subtitle>
-  <:actions>
-    <.link patch={~p"/packing_lists/#{@packing_list}/show/edit"} phx-click={JS.push_focus()}>
-      <.button>Edit packing_list</.button>
-    </.link>
-  </:actions>
-</.header>
 
-<.list>
-  <:item title="Title"><%= @packing_list.title %></:item>
-</.list>
+<.packing_list packing_list={@packing_list} items={@items}/>
 
 <.back navigate={~p"/packing_lists"}>Back to packing_lists</.back>
-
-<.modal :if={@live_action == :edit} id="packing_list-modal" show on_cancel={JS.patch(~p"/packing_lists/#{@packing_list}")}>
-  <.live_component
-    module={PhxPackingListWeb.PackingListLive.FormComponent}
-    id={@packing_list.id}
-    title={@page_title}
-    action={@live_action}
-    packing_list={@packing_list}
-    patch={~p"/packing_lists/#{@packing_list}"}
-  />
-</.modal>
