feat(frontend): added drag and drop using Sortable.js

--- a/lib/phx_packing_list_web/live/packing_list_live/show.html.heex
+++ b/lib/phx_packing_list_web/live/packing_list_live/show.html.heex
@@ -9,7 +9,13 @@
 
 <h2 class="text-darkest font-bold text-xl">Items</h2>
 
-<div id="items" phx-update="stream" class="flex flex-col space-y-4">
+<div
+  id="items"
+  phx-update="stream"
+  class="flex flex-col space-y-4"
+  phx-hook="Sortable"
+  data-list_id="list"
+>
   <.live_component :for={{id, item} <- @streams.items} module={ItemLive} item={item} id={id} />
 </div>
 
