refactor(layout): added margin below navbar up top

--- a/lib/phx_packing_list_web/components/layouts/app.html.heex
+++ b/lib/phx_packing_list_web/components/layouts/app.html.heex
@@ -30,6 +30,9 @@
   <div class="mx-auto max-w-4xl">
     <.header_menu />
     <.flash_group flash={@flash} />
-    <%= @inner_content %>
+
+    <div class="mt-16">
+      <%= @inner_content %>
+    </div>
   </div>
 </main>
