refactor(items): changed text color to dark instead of darkest

--- a/lib/phx_packing_list_web/live/item_live.html.heex
+++ b/lib/phx_packing_list_web/live/item_live.html.heex
@@ -1,5 +1,5 @@
 <div
-      class="flex flex-row bg-white text-darkest justify-between shadow-sm px-4 select-none"
+      class="flex flex-row bg-white text-dark justify-between shadow-sm px-4 select-none"
       id={@id}
       data-id={@item.id}
 
