refactor(packing-list): moved back button to top of page and restyled it

--- a/lib/phx_packing_list_web/live/packing_list_live/show.html.heex
+++ b/lib/phx_packing_list_web/live/packing_list_live/show.html.heex
@@ -1,4 +1,7 @@
-<h1 class="text-3xl font-bold text-darkest mb-10">  <%= @packing_list.title %> </h1>
+<div class="mb-2">
+  <.back navigate={~p"/packing_lists"}>View Packing Lists</.back>
+</div>
+
 
 <div class="mb-8">
   <div class="flex flex-row items-center mb-4 space-x-1">
@@ -63,5 +66,3 @@
 >
   <.live_component :for={{id, item} <- @streams.items} module={ItemLive} item={item} id={id} />
 </div>
-
-<.back navigate={~p"/packing_lists"}>Back to packing_lists</.back>
